fix flickering particles

--- a/css/sections/sections.css
+++ b/css/sections/sections.css
@@ -16,7 +16,7 @@ p {
 }
 
 #home {
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.8);
   height: 1000px;
   position: relative;
 }
